--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>HeaderSleuth++ — Phase 1</title>
+  <title>HeaderSleuth++ — Phase 1 (Fixed)</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -82,6 +82,7 @@
     </footer>
   </div>
 
+  <!-- load script last -->
   <script src="script.js"></script>
 </body>
 </html>
